// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBox should handle events on random button 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-14dydvq {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-14dydvq::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq:hover,
.cache-14dydvq:focus {
  border-color: #4F0599;
}

.cache-14dydvq:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-14dydvq::-webkit-input-placeholder {
  opacity: 1;
}

.cache-14dydvq::-moz-placeholder {
  opacity: 1;
}

.cache-14dydvq:-ms-input-placeholder {
  opacity: 1;
}

.cache-14dydvq::placeholder {
  opacity: 1;
}

.cache-1ggi6vn {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #B2B6C3;
  pointer-events: auto;
}

.cache-1ggi6vn:hover,
.cache-1ggi6vn:focus-within {
  color: #C4C9D6;
}

.cache-1ggi6vn>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-14dydvq e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <div
        class="cache-1ggi6vn e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-1me4bek"
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should handle events on toggleable password 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-14dydvq {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-14dydvq::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq:hover,
.cache-14dydvq:focus {
  border-color: #4F0599;
}

.cache-14dydvq:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-14dydvq::-webkit-input-placeholder {
  opacity: 1;
}

.cache-14dydvq::-moz-placeholder {
  opacity: 1;
}

.cache-14dydvq:-ms-input-placeholder {
  opacity: 1;
}

.cache-14dydvq::placeholder {
  opacity: 1;
}

.cache-1ggi6vn {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #B2B6C3;
  pointer-events: auto;
}

.cache-1ggi6vn:hover,
.cache-1ggi6vn:focus-within {
  color: #C4C9D6;
}

.cache-1ggi6vn>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-14dydvq e18bmnpq0"
        name="password"
        type="text"
        value=""
      />
      <div
        class="cache-1ggi6vn e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-1me4bek"
          title="Hide"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.83,9L15,12.16C15,12.11 15,12.05 15,12A3,3 0 0,0 12,9C11.94,9 11.89,9 11.83,9M7.53,9.8L9.08,11.35C9.03,11.56 9,11.77 9,12A3,3 0 0,0 12,15C12.22,15 12.44,14.97 12.65,14.92L14.2,16.47C13.53,16.8 12.79,17 12,17A5,5 0 0,1 7,12C7,11.21 7.2,10.47 7.53,9.8M2,4.27L4.28,6.55L4.73,7C3.08,8.3 1.78,10 1,12C2.73,16.39 7,19.5 12,19.5C13.55,19.5 15.03,19.2 16.38,18.66L16.81,19.08L19.73,22L21,20.73L3.27,3M12,7A5,5 0 0,1 17,12C17,12.64 16.87,13.26 16.64,13.82L19.57,16.75C21.07,15.5 22.27,13.86 23,12C21.27,7.61 17,4.5 12,4.5C10.6,4.5 9.26,4.75 8,5.2L10.17,7.35C10.74,7.13 11.35,7 12,7Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1siec8m {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1siec8m::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1siec8m::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1siec8m:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1siec8m::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1siec8m:hover,
.cache-1siec8m:focus {
  border-color: #4F0599;
}

.cache-1siec8m:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1siec8m::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1siec8m::-moz-placeholder {
  opacity: 1;
}

.cache-1siec8m:-ms-input-placeholder {
  opacity: 1;
}

.cache-1siec8m::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1siec8m e18bmnpq0"
        type="text"
        value=""
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly disabled true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-197oj0y {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #F6F6F8;
  border-color: #FCFCFD;
  color: #D4DAE7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-197oj0y::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-197oj0y::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-197oj0y:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-197oj0y::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-197oj0y:hover,
.cache-197oj0y:focus {
  border-color: #4F0599;
}

.cache-197oj0y:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-197oj0y::-webkit-input-placeholder {
  opacity: 1;
}

.cache-197oj0y::-moz-placeholder {
  opacity: 1;
}

.cache-197oj0y:-ms-input-placeholder {
  opacity: 1;
}

.cache-197oj0y::placeholder {
  opacity: 1;
}

.cache-1kg7oxa {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #D4DAE7;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-197oj0y e18bmnpq0"
        disabled=""
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-1kg7oxa e18bmnpq3"
        disabled=""
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly error string 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-gnje5z {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  border-color: #DD3252;
}

.cache-gnje5z::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-gnje5z::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-gnje5z:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-gnje5z::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-gnje5z:hover,
.cache-gnje5z:focus {
  border-color: #4F0599;
}

.cache-gnje5z:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-gnje5z::-webkit-input-placeholder {
  opacity: 1;
}

.cache-gnje5z::-moz-placeholder {
  opacity: 1;
}

.cache-gnje5z:-ms-input-placeholder {
  opacity: 1;
}

.cache-gnje5z::placeholder {
  opacity: 1;
}

.cache-gnje5z:hover,
.cache-gnje5z:focus {
  border-color: #A6102D;
}

.cache-gnje5z:focus {
  box-shadow: 0 0 0 2px rgba(221,50,82,0.25);
  border-color: #DD3252;
}

.cache-sp82m3 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #DD3252;
}

.cache-9xime5 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.cache-9xime5.cache-9xime5 {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-gnje5z e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-sp82m3 e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-9xime5"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      >
        test error
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1siec8m {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1siec8m::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1siec8m::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1siec8m:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1siec8m::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1siec8m:hover,
.cache-1siec8m:focus {
  border-color: #4F0599;
}

.cache-1siec8m:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1siec8m::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1siec8m::-moz-placeholder {
  opacity: 1;
}

.cache-1siec8m:-ms-input-placeholder {
  opacity: 1;
}

.cache-1siec8m::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        aria-label="Test"
        autocomplete="on"
        class="cache-1siec8m e18bmnpq0"
        type="text"
        value="test"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 2`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1siec8m {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1siec8m::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1siec8m::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1siec8m:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1siec8m::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1siec8m:hover,
.cache-1siec8m:focus {
  border-color: #4F0599;
}

.cache-1siec8m:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1siec8m::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1siec8m::-moz-placeholder {
  opacity: 1;
}

.cache-1siec8m:-ms-input-placeholder {
  opacity: 1;
}

.cache-1siec8m::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1siec8m e18bmnpq0"
        type="text"
        value="test"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 3`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1yp6dh1 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1yp6dh1::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1:hover,
.cache-1yp6dh1:focus {
  border-color: #4F0599;
}

.cache-1yp6dh1:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1yp6dh1::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1yp6dh1::-moz-placeholder {
  opacity: 1;
}

.cache-1yp6dh1:-ms-input-placeholder {
  opacity: 1;
}

.cache-1yp6dh1::placeholder {
  opacity: 1;
}

.cache-1v6gn0v {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1yp6dh1 e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-1v6gn0v e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly multiline true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-x0glz7 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-top: 20px;
  height: initial;
  resize: none;
  padding-top: 8px;
}

.cache-x0glz7::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-x0glz7::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-x0glz7:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-x0glz7::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-x0glz7:hover,
.cache-x0glz7:focus {
  border-color: #4F0599;
}

.cache-x0glz7:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-x0glz7::-webkit-input-placeholder {
  opacity: 1;
}

.cache-x0glz7::-moz-placeholder {
  opacity: 1;
}

.cache-x0glz7:-ms-input-placeholder {
  opacity: 1;
}

.cache-x0glz7::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <textarea
        autocomplete="on"
        class="cache-x0glz7 e18bmnpq0"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly required true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-c3v7wp {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 22px;
}

.cache-c3v7wp::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-c3v7wp::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-c3v7wp:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-c3v7wp::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-c3v7wp:hover,
.cache-c3v7wp:focus {
  border-color: #4F0599;
}

.cache-c3v7wp:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-c3v7wp::-webkit-input-placeholder {
  opacity: 1;
}

.cache-c3v7wp::-moz-placeholder {
  opacity: 1;
}

.cache-c3v7wp:-ms-input-placeholder {
  opacity: 1;
}

.cache-c3v7wp::placeholder {
  opacity: 1;
}

.cache-1v6gn0v {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1julpj7 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #B2B6C3;
  -webkit-transform: translateY(8px);
  -moz-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
}

.cache-1julpj7:hover,
.cache-1julpj7:focus-within {
  color: #C4C9D6;
}

.cache-jlcm9f {
  fill: #ef5774;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-jlcm9f.cache-jlcm9f {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-c3v7wp e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-1v6gn0v e18bmnpq3"
      >
        Test
      </label>
      <div
        class="cache-1julpj7 e18bmnpq4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-jlcm9f"
          viewBox="0 0 24 24"
        >
          <path
            d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with ariaControls 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-80iae1 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-80iae1::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1:hover,
.cache-80iae1:focus {
  border-color: #4F0599;
}

.cache-80iae1:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1k8r3kt {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        aria-controls="test-control"
        aria-labelledby="test-control"
        autocomplete="on"
        class="cache-80iae1 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1k8r3kt e18bmnpq3"
        id="test-control"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with basic props 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1yp6dh1 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1yp6dh1::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1:hover,
.cache-1yp6dh1:focus {
  border-color: #4F0599;
}

.cache-1yp6dh1:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1yp6dh1::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1yp6dh1::-moz-placeholder {
  opacity: 1;
}

.cache-1yp6dh1:-ms-input-placeholder {
  opacity: 1;
}

.cache-1yp6dh1::placeholder {
  opacity: 1;
}

.cache-1v6gn0v {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1yp6dh1 e18bmnpq0"
        id="test"
        placeholder="type..."
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-1v6gn0v e18bmnpq3"
        for="test"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with defaultValue true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-80iae1 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-80iae1::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1:hover,
.cache-80iae1:focus {
  border-color: #4F0599;
}

.cache-80iae1:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1k8r3kt {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-80iae1 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1k8r3kt e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with edit true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1yp6dh1 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1yp6dh1::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1:hover,
.cache-1yp6dh1:focus {
  border-color: #4F0599;
}

.cache-1yp6dh1:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1yp6dh1::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1yp6dh1::-moz-placeholder {
  opacity: 1;
}

.cache-1yp6dh1:-ms-input-placeholder {
  opacity: 1;
}

.cache-1yp6dh1::placeholder {
  opacity: 1;
}

.cache-1v6gn0v {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1yp6dh1 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1v6gn0v e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with fillAvailable true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-80iae1 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-80iae1::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1:hover,
.cache-80iae1:focus {
  border-color: #4F0599;
}

.cache-80iae1:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1k8r3kt {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-80iae1 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1k8r3kt e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with generated true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1yp6dh1 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1yp6dh1::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1:hover,
.cache-1yp6dh1:focus {
  border-color: #4F0599;
}

.cache-1yp6dh1:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1yp6dh1::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1yp6dh1::-moz-placeholder {
  opacity: 1;
}

.cache-1yp6dh1:-ms-input-placeholder {
  opacity: 1;
}

.cache-1yp6dh1::placeholder {
  opacity: 1;
}

.cache-1v6gn0v {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1yp6dh1 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1v6gn0v e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with height prop 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1yp6dh1 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1yp6dh1::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1:hover,
.cache-1yp6dh1:focus {
  border-color: #4F0599;
}

.cache-1yp6dh1:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1yp6dh1::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1yp6dh1::-moz-placeholder {
  opacity: 1;
}

.cache-1yp6dh1:-ms-input-placeholder {
  opacity: 1;
}

.cache-1yp6dh1::placeholder {
  opacity: 1;
}

.cache-1v6gn0v {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1yp6dh1 e18bmnpq0"
        style="height: 90px;"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-1v6gn0v e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with notice 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1yp6dh1 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1yp6dh1::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1yp6dh1:hover,
.cache-1yp6dh1:focus {
  border-color: #4F0599;
}

.cache-1yp6dh1:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1yp6dh1::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1yp6dh1::-moz-placeholder {
  opacity: 1;
}

.cache-1yp6dh1:-ms-input-placeholder {
  opacity: 1;
}

.cache-1yp6dh1::placeholder {
  opacity: 1;
}

.cache-1v6gn0v {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

.cache-ocbo1z {
  color: #B2B6C3;
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-ocbo1z.cache-ocbo1z {
  margin-top: 8px;
}

.cache-bkobgy {
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-bkobgy.cache-bkobgy {
  vertical-align: top;
  margin-right: 8px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1yp6dh1 e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-1v6gn0v e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
    <div
      class="e1qg14600 cache-ocbo1z"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-bkobgy"
        viewBox="0 0 24 24"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        />
      </svg>
      <div
        class="ejtitxs0 cache-ykhhhn"
      >
        <p>
          <span>
            Test notice
          </span>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with null right component 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-zx3aj4 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-zx3aj4::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-zx3aj4::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-zx3aj4:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-zx3aj4::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-zx3aj4:hover,
.cache-zx3aj4:focus {
  border-color: #4F0599;
}

.cache-zx3aj4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-zx3aj4::-webkit-input-placeholder {
  opacity: 1;
}

.cache-zx3aj4::-moz-placeholder {
  opacity: 1;
}

.cache-zx3aj4:-ms-input-placeholder {
  opacity: 1;
}

.cache-zx3aj4::placeholder {
  opacity: 1;
}

.cache-1v6gn0v {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-s85n1f {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #B2B6C3;
  -webkit-transform: translateY(8px);
  -moz-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
  pointer-events: auto;
}

.cache-s85n1f:hover,
.cache-s85n1f:focus-within {
  color: #C4C9D6;
}

.cache-s85n1f>button {
  box-shadow: none!important;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-zx3aj4 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1v6gn0v e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-s85n1f e18bmnpq4"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with readOnly true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-ada23c {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  background-color: #E6E9F0;
  border-color: #F6F6F8;
  color: #4A4F62;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-ada23c::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-ada23c::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-ada23c:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-ada23c::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-ada23c:hover,
.cache-ada23c:focus {
  border-color: #4F0599;
}

.cache-ada23c:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-3g6ee3 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  color: #C4C9D6;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-ada23c e18bmnpq0"
        name="test"
        readonly=""
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-3g6ee3 e18bmnpq3"
        readonly=""
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with unit is px 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1henvp6 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-1henvp6::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1henvp6::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1henvp6:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1henvp6::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1henvp6:hover,
.cache-1henvp6:focus {
  border-color: #4F0599;
}

.cache-1henvp6:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1k8r3kt {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-1vyazv5 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #B2B6C3;
  padding-top: 0;
  padding-bottom: 0;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-1vyazv5:hover,
.cache-1vyazv5:focus-within {
  color: #C4C9D6;
}

.cache-8om1fb {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
  margin-right: 8px;
  margin-top: 1px;
  height: calc(100% - 2px);
  background-color: #F6F6F8;
}

.cache-ps00vq {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #B2B6C3;
  font-size: 14px;
  line-height: 18px;
}

.cache-ps00vq.cache-ps00vq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1henvp6 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1k8r3kt e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-1vyazv5 e18bmnpq4"
      >
        <hr
          aria-orientation="vertical"
          class="e18bmnpq5 eoti1h20 cache-8om1fb"
          role="separator"
        />
        <p
          class="e1g1zfwd0 cache-ps00vq"
        >
          px
        </p>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with unit is px and required 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-eqirzs {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 22px;
}

.cache-eqirzs::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-eqirzs::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-eqirzs:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-eqirzs::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-eqirzs:hover,
.cache-eqirzs:focus {
  border-color: #4F0599;
}

.cache-eqirzs:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1k8r3kt {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-1vyazv5 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #B2B6C3;
  padding-top: 0;
  padding-bottom: 0;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-1vyazv5:hover,
.cache-1vyazv5:focus-within {
  color: #C4C9D6;
}

.cache-8om1fb {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
  margin-right: 8px;
  margin-top: 1px;
  height: calc(100% - 2px);
  background-color: #F6F6F8;
}

.cache-ps00vq {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #B2B6C3;
  font-size: 14px;
  line-height: 18px;
}

.cache-ps00vq.cache-ps00vq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-c62r2c {
  fill: #ef5774;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
}

.cache-c62r2c.cache-c62r2c {
  vertical-align: middle;
  margin-left: 2px;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-eqirzs e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1k8r3kt e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-1vyazv5 e18bmnpq4"
      >
        <hr
          aria-orientation="vertical"
          class="e18bmnpq5 eoti1h20 cache-8om1fb"
          role="separator"
        />
        <p
          class="e1g1zfwd0 cache-ps00vq"
        >
          px
          <svg
            class="sc-ui-icon etwatq50 cache-c62r2c"
            viewBox="0 0 24 24"
          >
            <path
              d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
            />
          </svg>
        </p>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with valid false 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-80iae1 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-80iae1::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-80iae1:hover,
.cache-80iae1:focus {
  border-color: #4F0599;
}

.cache-80iae1:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1k8r3kt {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-80iae1 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1k8r3kt e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with valid true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1henvp6 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-1henvp6::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1henvp6::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1henvp6:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1henvp6::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-1henvp6:hover,
.cache-1henvp6:focus {
  border-color: #4F0599;
}

.cache-1henvp6:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1k8r3kt {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-1mhgn8x {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #B2B6C3;
}

.cache-1mhgn8x:hover,
.cache-1mhgn8x:focus-within {
  color: #C4C9D6;
}

.cache-19wgnhk {
  fill: #45d6b5;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-19wgnhk.cache-19wgnhk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1henvp6 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1k8r3kt e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-1mhgn8x e18bmnpq4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-19wgnhk"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render multiline with props 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-rx3cc {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-top: 20px;
  height: 100%;
  resize: vertical;
  padding-top: 8px;
}

.cache-rx3cc::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-rx3cc::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-rx3cc:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-rx3cc::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-rx3cc:hover,
.cache-rx3cc:focus {
  border-color: #4F0599;
}

.cache-rx3cc:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-rx3cc::-webkit-input-placeholder {
  opacity: 1;
}

.cache-rx3cc::-moz-placeholder {
  opacity: 1;
}

.cache-rx3cc:-ms-input-placeholder {
  opacity: 1;
}

.cache-rx3cc::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <textarea
        autocomplete="on"
        class="cache-rx3cc e18bmnpq0"
        cols="50"
        rows="10"
      />
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render on focus 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-3s0mmx {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-top: 20px;
  height: initial;
  resize: vertical;
}

.cache-3s0mmx::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-3s0mmx::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-3s0mmx:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-3s0mmx::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-3s0mmx:hover,
.cache-3s0mmx:focus {
  border-color: #4F0599;
}

.cache-3s0mmx:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-3s0mmx::-webkit-input-placeholder {
  opacity: 1;
}

.cache-3s0mmx::-moz-placeholder {
  opacity: 1;
}

.cache-3s0mmx:-ms-input-placeholder {
  opacity: 1;
}

.cache-3s0mmx::placeholder {
  opacity: 1;
}

.cache-1v6gn0v {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <textarea
        autocomplete="on"
        class="cache-3s0mmx e18bmnpq0"
        cols="50"
        id="test"
        rows="10"
      />
      <label
        aria-live="assertive"
        class="cache-1v6gn0v e18bmnpq3"
        for="test"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render random 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-14dydvq {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-14dydvq::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq:hover,
.cache-14dydvq:focus {
  border-color: #4F0599;
}

.cache-14dydvq:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-14dydvq::-webkit-input-placeholder {
  opacity: 1;
}

.cache-14dydvq::-moz-placeholder {
  opacity: 1;
}

.cache-14dydvq:-ms-input-placeholder {
  opacity: 1;
}

.cache-14dydvq::placeholder {
  opacity: 1;
}

.cache-1ggi6vn {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #B2B6C3;
  pointer-events: auto;
}

.cache-1ggi6vn:hover,
.cache-1ggi6vn:focus-within {
  color: #C4C9D6;
}

.cache-1ggi6vn>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-14dydvq e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <div
        class="cache-1ggi6vn e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-1me4bek"
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render random 2`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-tlplm0 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #F6F6F8;
  border-color: #FCFCFD;
  color: #D4DAE7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-tlplm0::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-tlplm0::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-tlplm0:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-tlplm0::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-tlplm0:hover,
.cache-tlplm0:focus {
  border-color: #4F0599;
}

.cache-tlplm0:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-1ia1n1y {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #B2B6C3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  color: #D4DAE7;
}

.cache-1ggi6vn {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #B2B6C3;
  pointer-events: auto;
}

.cache-1ggi6vn:hover,
.cache-1ggi6vn:focus-within {
  color: #C4C9D6;
}

.cache-1ggi6vn>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-tlplm0 e18bmnpq0"
        disabled=""
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1ia1n1y e18bmnpq3"
        disabled=""
      >
        test
      </label>
      <div
        class="cache-1ggi6vn e18bmnpq4"
      >
        <button
          aria-disabled="true"
          class="e1kgqxfn0 cache-1me4bek"
          disabled=""
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render toggleable password 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-14dydvq {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #FCFCFD;
  background-image: none;
  border: 1px solid #D4DAE7;
  border-radius: 4px;
  color: #4A4F62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-14dydvq::-webkit-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq::-moz-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq:-ms-input-placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq::placeholder {
  color: #B2B6C3;
  opacity: 0;
}

.cache-14dydvq:hover,
.cache-14dydvq:focus {
  border-color: #4F0599;
}

.cache-14dydvq:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4F0599;
}

.cache-14dydvq::-webkit-input-placeholder {
  opacity: 1;
}

.cache-14dydvq::-moz-placeholder {
  opacity: 1;
}

.cache-14dydvq:-ms-input-placeholder {
  opacity: 1;
}

.cache-14dydvq::placeholder {
  opacity: 1;
}

.cache-1ggi6vn {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #B2B6C3;
  pointer-events: auto;
}

.cache-1ggi6vn:hover,
.cache-1ggi6vn:focus-within {
  color: #C4C9D6;
}

.cache-1ggi6vn>button {
  box-shadow: none!important;
}

.cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-r6qttx {
  font-size: 12px;
  color: #DD3252;
  padding-top: 2px;
}

<div
    class="cache-3svqc9"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-14dydvq e18bmnpq0"
        name="password"
        type="password"
        value=""
      />
      <div
        class="cache-1ggi6vn e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-1me4bek"
          title="Show"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-una6lk"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-xcx33n"
    >
      <div
        class="cache-r6qttx e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;
